add styling to landing and login pages

--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -1,5 +1,19 @@
+$black: #333;
+
 $blue: #367CDF;
+
+$darker-blue: rgb(40, 109, 207);
+
+$purple: #882BDB;
+
+$darker-purple: #7522BE;
+
+$gray: #DEDEDE;
+
+$darker-gray: #CECECE;
 
 $fonts: 'Lato', sans-serif;
 
 $border: 1px solid #ddd;
+
+$box-shadow: 0 2px 4px rgba(0,0,0, .2);
