--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -59,6 +59,9 @@ a {
   a:hover {
     text-decoration: underline; }
 
+p {
+  margin-bottom: 1rem; }
+
 #root .app {
   display: flex;
   flex-direction: column; }
@@ -73,60 +76,63 @@ section {
 .breadcrumbs {
   margin-bottom: 1rem; }
 
-/*a {
-  button {
-    width: 100%;
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
-}*/
-button {
-  display: block; }
-  button:hover {
-    cursor: pointer; }
-
-.button {
+.button, button {
   display: inline-block;
-  padding: .8rem 2rem;
-  background-color: #ddd;
-  margin: 1rem;
-  text-decoration: none; }
-  .button:hover {
-    background-color: #ccc; }
+  padding: 1rem 2rem;
+  background-color: #DEDEDE;
+  color: #333;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px; }
+  .button:hover, button:hover {
+    background-color: #CECECE;
+    text-decoration: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all .1s ease-in-out; }
 
 .open-wine-form {
   font-family: "Lato", sans-serif;
   font-size: 1.5rem;
-  padding: .8rem 2rem; }
+  padding: 1rem 2rem; }
 
-form {
+.add-wine-btn {
+  display: block;
+  margin-bottom: 1rem;
+  text-align: center; }
+
+.btn-primary {
+  background-color: #882BDB;
+  color: #fff; }
+  .btn-primary:hover {
+    background-color: #7522BE; }
+
+.wine-form {
   margin: 1rem 0;
   background-color: #f9f9f9;
   padding: 1rem 3%; }
-  form .form-container {
+  .wine-form .wine-form-container {
     max-width: 700px;
     display: flex;
     flex-direction: column; }
-    form .form-container .form-row {
+    .wine-form .wine-form-container .wine-form-row {
       flex: 1 1 auto;
       display: flex;
       flex-direction: row; }
-      form .form-container .form-row label {
+      .wine-form .wine-form-container .wine-form-row label {
         flex: 1 1;
         margin-top: .8rem; }
-      form .form-container .form-row input[type="text"],
-      form .form-container .form-row input[type="date"],
-      form .form-container .form-row input[type="number"],
-      form .form-container .form-row textarea {
+      .wine-form .wine-form-container .wine-form-row input[type="text"],
+      .wine-form .wine-form-container .wine-form-row input[type="date"],
+      .wine-form .wine-form-container .wine-form-row input[type="number"],
+      .wine-form .wine-form-container .wine-form-row textarea {
         flex: 2 1; }
-      form .form-container .form-row .radio-buttons {
+      .wine-form .wine-form-container .wine-form-row .radio-buttons {
         flex: 2 1;
         margin-top: .6rem; }
-        form .form-container .form-row .radio-buttons label {
+        .wine-form .wine-form-container .wine-form-row .radio-buttons label {
           margin-top: 0; }
-  form a {
+  .wine-form a {
     display: block;
     margin-bottom: 1rem; }
 
@@ -159,7 +165,6 @@ header {
   background-color: #f9f9f9;
   flex: 1 0 60px;
   display: flex;
-  margin-bottom: 20px;
   line-height: 60px;
   padding-top: 0;
   padding-right: 3%;
@@ -189,20 +194,91 @@ footer {
   background-color: #f9f9f9;
   flex: 1 0 60px;
   display: flex;
-  margin-top: 2rem;
   line-height: 60px;
   padding-top: 0;
   padding-right: 3%;
   padding-bottom: 0;
   padding-left: 3%; }
 
+.landing {
+  background-image: url("../images/andrew-seaman-598038-unsplash.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin-top: -80px;
+  display: flex;
+  justify-content: flex-start; }
+  .landing .container {
+    flex: 0 1 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff; }
+    .landing .container .landing-buttons {
+      display: flex;
+      flex-direction: row; }
+      .landing .container .landing-buttons a.button {
+        flex: none; }
+      .landing .container .landing-buttons a.button:first-child {
+        margin-right: 1rem; }
+
+.auth-form {
+  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch; }
+  .auth-form .auth-form-row {
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: center; }
+    .auth-form .auth-form-row input[type="email"],
+    .auth-form .auth-form-row input[type="password"],
+    .auth-form .auth-form-row button[type="submit"] {
+      padding: 1rem;
+      flex: 0 1 500px; }
+    .auth-form .auth-form-row button {
+      box-sizing: content-box; }
+
+.bg-image {
+  background-image: url("../images/login_bg_edit.jpg");
+  background-color: #DEDEDE;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  margin-top: -60px;
+  display: flex;
+  justify-content: center; }
+  .bg-image .auth-container {
+    flex: 0 1 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #555; }
+    .bg-image .auth-container h1 {
+      margin-bottom: 0; }
+
 .wine-card {
   display: inline-block;
   width: 24%;
   margin-right: 1%;
   margin-bottom: 1%;
-  padding: 1rem;
+  padding-bottom: .5rem;
   border: 1px solid #ddd;
-  border-radius: 3px; }
+  border-radius: 5px;
+  color: #333; }
+  .wine-card:hover {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: all .1s ease-in-out; }
+  .wine-card .card-image {
+    background-color: #ddd;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 200px; }
+  .wine-card h3.wine-row {
+    padding-top: .8rem; }
   .wine-card .wine-row {
-    display: block; }
+    display: block;
+    padding: .1rem 1rem; }
