--- a/client/src/styles/sass/components/_buttons.scss
+++ b/client/src/styles/sass/components/_buttons.scss
@@ -1,37 +1,43 @@
-/*a {
-  button {
-    width: 100%;
+// button {
+//   display: block;
+// }
 
-    &:hover {
-      cursor: pointer;
-    }
-  }
-}*/
-
-button {
-  display: block;
-
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-.button {
+.button, button {
   display: inline-block;
-  padding: .8rem 2rem;
-  background-color: #ddd;
-  margin: 1rem;
+  padding: 1rem 2rem;
+  background-color: $gray;
+  color: $black;
   text-decoration: none;
+  border: none;
+  border-radius: 5px;
 
   &:hover {
-    background-color: #ccc;
+    background-color: $darker-gray;
+    text-decoration: none;
+    box-shadow: $box-shadow;
+    cursor: pointer;
+    transition: all .1s ease-in-out;
   }
-
 }
 
 .open-wine-form {
   font-family: $fonts;
   font-size: 1.5rem;
-  padding: .8rem 2rem;
+  padding: 1rem 2rem;
+}
+
+.add-wine-btn {
+  display: block;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.btn-primary {
+  background-color: $purple;
+  color: #fff;
+
+  &:hover {
+    background-color: $darker-purple;
+  }
 }
 
