--- a/client/src/styles/sass/components/_forms.scss
+++ b/client/src/styles/sass/components/_forms.scss
@@ -1,14 +1,14 @@
-form {
+.wine-form {
   margin: 1rem 0;
   background-color: #f9f9f9;
   padding: 1rem 3%; 
 
-  .form-container {
+  .wine-form-container {
     max-width: 700px;
     display: flex; //this is the main flex container
     flex-direction: column; //each field has it's own row
 
-    .form-row {
+    .wine-form-row {
       flex: 1 1 auto; //grow and shrink, auto fill size
       display: flex; //become flex container for label and input
       flex-direction: row; //make label and input their own column
@@ -69,3 +69,4 @@ input[type="radio"] {
   flex-direction: column;
   align-items: flex-start;
 }
+
