--- a/client/src/styles/sass/layout/_footer.scss
+++ b/client/src/styles/sass/layout/_footer.scss
@@ -2,7 +2,7 @@ footer {
   background-color: #f9f9f9;
   flex: 1 0 60px;
   display: flex;
-  margin-top: 2rem;
+  //margin-top: 2rem;
   line-height: 60px;
   @include page-padding;
 }
