--- a/client/src/styles/sass/layout/_header.scss
+++ b/client/src/styles/sass/layout/_header.scss
@@ -2,7 +2,7 @@ header {
   background-color: #f9f9f9;
   flex: 1 0 60px;
   display: flex;
-  margin-bottom: 20px;
+  //margin-bottom: 20px;
   line-height: 60px;
   @include page-padding;
 }
