--- a/client/src/styles/sass/layout/_winedisplay.scss
+++ b/client/src/styles/sass/layout/_winedisplay.scss
@@ -1,16 +1,33 @@
+.wine-card {
+  display: inline-block;
+  width: 24%;
+  margin-right: 1%;
+  margin-bottom: 1%;
+  padding-bottom: .5rem;
+  border: $border;
+  border-radius: 5px;
+  color: $black;
 
-
-  .wine-card {
-    display: inline-block;
-    width: 24%;
-    margin-right: 1%;
-    margin-bottom: 1%;
-    padding: 1rem;
-    border: $border;
-    border-radius: 3px;
-
-    .wine-row {
-      display: block;
-    }
+  &:hover {
+    box-shadow: $box-shadow;
+    transition: all .1s ease-in-out;
   }
+
+  .card-image {
+    background-color: #ddd;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 200px;
+  }
+
+  h3.wine-row {
+    padding-top: .8rem;
+  }
+
+  .wine-row {
+    display: block;
+    padding: .1rem 1rem;
+  }
+}
 
