--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -12,7 +12,7 @@ $gray: #DEDEDE;
 
 $darker-gray: #CECECE;
 
-$fonts: 'Lato', sans-serif;
+$fonts: 'Helvetica Neue', 'Lato', sans-serif;
 
 $border: 1px solid #ddd;
 
