--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -44,7 +44,7 @@ html {
 body {
   background-color: #fff;
   margin: 0;
-  font-family: "Lato", sans-serif;
+  font-family: "Helvetica Neue", "Lato", sans-serif;
   color: #222;
   font-size: 1rem; }
 
@@ -92,7 +92,7 @@ section {
     transition: all .1s ease-in-out; }
 
 .open-wine-form {
-  font-family: "Lato", sans-serif;
+  font-family: "Helvetica Neue", "Lato", sans-serif;
   font-size: 1.5rem;
   padding: 1rem 2rem; }
 
@@ -204,7 +204,7 @@ footer {
   padding-left: 3%; }
 
 .landing {
-  background-image: url("../images/andrew-seaman-598038-unsplash.jpg");
+  background-image: url("../images/login_bg-5.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -217,7 +217,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #fff; }
+    color: #333; }
     .landing .container .landing-buttons {
       display: flex;
       flex-direction: row; }
@@ -244,7 +244,7 @@ footer {
       box-sizing: content-box; }
 
 .bg-image {
-  background-image: url("../images/login_bg_edit.jpg");
+  background-image: url("../images/login_bg.png");
   background-color: #DEDEDE;
   background-size: cover;
   background-position: center;
