--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -12,7 +12,9 @@ $gray: #DEDEDE;
 
 $darker-gray: #CECECE;
 
-$fonts: 'Helvetica Neue', 'Lato', sans-serif;
+$font-heading: 'Playfair Display', serif;
+
+$font-body: 'Helvetica Neue', 'Lato', sans-serif;
 
 $border: 1px solid #ddd;
 
