--- a/client/src/styles/sass/base/_general.scss
+++ b/client/src/styles/sass/base/_general.scss
@@ -9,9 +9,13 @@ html {
 body {
   background-color: #fff;
   margin: 0;
-  font-family: $fonts;
+  font-family: $font-body;
   color: #222;
   font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $font-heading;
 }
 
 h1 {
