--- a/client/src/styles/sass/layout/_index.scss
+++ b/client/src/styles/sass/layout/_index.scss
@@ -1,7 +1,7 @@
 .landing {
   //background-image: url('../images/andrew-seaman-598038-unsplash.jpg');
-  // background-image: url('../images/home_bg.png');
-  background-image: url('../images/login_bg-5.png');
+  background-image: url('../images/home_bg.png');
+  // background-image: url('../images/login_bg-5.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
