--- a/client/src/styles/sass/base/_general.scss
+++ b/client/src/styles/sass/base/_general.scss
@@ -12,16 +12,36 @@ body {
   font-family: $font-body;
   color: #222;
   font-size: 1rem;
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-heading;
+  line-height: 1.15;
+  margin: 2.75rem 0 1rem;
 }
 
 h1 {
-  font-size: 2em;
-  font-weight: 700;
-  margin-bottom: 1em;
+  font-size: 4.209em;
+  color: #554d59;
+  font-weight: 900;
+  margin-top: 0;
+}
+
+h2 {
+  font-size: 3.157em;
+}
+
+h3 {
+  font-size: 2.369em;
+}
+
+h4 {
+  font-size: 1.777em;
+}
+
+h5 {
+  font-size: 1.333em;
 }
 
 a {
@@ -35,7 +55,7 @@ a {
 }
 
 p {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 #root {
