--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -1,12 +1,16 @@
-$black: #333;
+$black: #2B202F;
 
 $blue: #367CDF;
 
 $darker-blue: rgb(40, 109, 207);
 
-$purple: #882BDB;
+// $purple: #882BDB;
 
-$darker-purple: #7522BE;
+// $darker-purple: #7522BE;
+
+$purple-pink: #9C52A7;
+
+$dark-purple: #573D62;
 
 $gray: #DEDEDE;
 
@@ -18,4 +22,4 @@ $font-body: 'Helvetica Neue', 'Lato', sans-serif;
 
 $border: 1px solid #ddd;
 
-$box-shadow: 0 2px 4px rgba(0,0,0, .2);
+$box-shadow: 0 3px 6px 0 rgba(0,0,0, .2);
