--- a/client/src/styles/sass/components/_module.scss
+++ b/client/src/styles/sass/components/_module.scss
@@ -1,4 +1,4 @@
 @import '_buttons.scss';
 @import 'wine-form/_forms.scss';
 @import 'wine-feed/_winedisplay.scss';
-@import 'auth/_login.scss';
+@import 'auth/_auth-form.scss';
