--- a/client/src/styles/sass/base/_general.scss
+++ b/client/src/styles/sass/base/_general.scss
@@ -10,7 +10,7 @@ body {
   background-color: #fff;
   margin: 0;
   font-family: $font-body;
-  color: #222;
+  color: $black;
   font-size: 1rem;
   line-height: 1.5;
 }
