add site layout component and work on responsive styles

--- a/client/src/styles/sass/base/_general.scss
+++ b/client/src/styles/sass/base/_general.scss
@@ -26,6 +26,10 @@ h1 {
   color: #554d59;
   font-weight: 900;
   margin-top: 0;
+
+  @media (max-width: 500px) {
+    font-size:3.157em;
+  }
 }
 
 h2 {
