--- a/client/src/styles/sass/components/_module.scss
+++ b/client/src/styles/sass/components/_module.scss
@@ -2,3 +2,4 @@
 @import 'wine-form/_forms.scss';
 @import 'wine-feed/_winedisplay.scss';
 @import 'auth/_auth-form.scss';
+@import 'common/white-overlay';
