--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -59,6 +60,9 @@ h1 {
   color: #554d59;
   font-weight: 900;
   margin-top: 0; }
+  @media (max-width: 500px) {
+    h1 {
+      font-size: 3.157em; } }
 
 h2 {
   font-size: 3.157em; }
@@ -109,6 +113,9 @@ section {
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: all .1s ease-in-out; }
+  @media (max-width: 500px) {
+    .button, button {
+      padding: .625em 2.75em; } }
 
 .open-wine-form {
   font-size: 1.5rem;
@@ -223,6 +230,19 @@ input[type="radio"] {
     .auth-form .auth-form-row button, .auth-form .auth-form-row input[type="submit"] {
       box-sizing: content-box; }
 
+.white-overlay {
+  content: “ ”; }
+  @media (max-width: 900px) {
+    .white-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vw;
+      background: inherit;
+      box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.8);
+      filter: blur(3px); } }
+
 header {
   background-color: #f9f9f9;
   flex: 1 0 60px;
@@ -254,7 +274,7 @@ nav {
 
 p {
   font-size: 1.125em;
-  max-width: 40vw; }
+  max-width: 600px; }
 
 .landing-buttons {
   display: flex;
@@ -276,10 +296,15 @@ p {
     max-height: 50px;
     margin-top: 2em;
     position: relative;
-    z-index: 1; }
+    z-index: 2; }
   .bg-image .container {
     flex: 1 1 auto;
     margin-top: -82px;
     display: flex;
     flex-direction: column;
-    justify-content: center; }
+    justify-content: center;
+    position: relative;
+    z-index: 1; }
+  @media (max-width: 900px) {
+    .bg-image {
+      background-position: right; } }
