--- a/client/src/styles/sass/components/_buttons.scss
+++ b/client/src/styles/sass/components/_buttons.scss
@@ -19,6 +19,10 @@
     cursor: pointer;
     transition: all .1s ease-in-out;
   }
+
+  @media (max-width: 500px) {
+    padding: .625em 2.75em;
+  }
 }
 
 .open-wine-form {
