--- a/client/src/styles/sass/layout/_landing.scss
+++ b/client/src/styles/sass/layout/_landing.scss
@@ -1,6 +1,6 @@
 p {
   font-size: 1.125em;
-  max-width: 40vw;
+  max-width: 600px;
 }
 
 .landing-buttons {
@@ -15,3 +15,4 @@ p {
     margin-right: 1rem;
   }
 }
+
