--- a/client/src/styles/sass/layout/_logged-out-layout.scss
+++ b/client/src/styles/sass/layout/_logged-out-layout.scss
@@ -11,7 +11,7 @@
     max-height: 50px;
     margin-top: 2em;
     position: relative;
-    z-index: 1;
+    z-index: 2;
   }
 
   .container {
@@ -20,5 +20,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center; //center content vertically
+    position: relative;
+    z-index: 1;
+  }
+
+  @media (max-width: 900px) {
+    background-position: right;
   }
 }
