--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -101,7 +101,7 @@ section {
 
 .button, button {
   display: inline-block;
-  padding: .625em 3.75em;
+  padding: .625em 2.8125em;
   background-color: #fff;
   color: #573D62;
   font-weight: 700;
@@ -113,9 +113,6 @@ section {
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: all .1s ease-in-out; }
-  @media (max-width: 500px) {
-    .button, button {
-      padding: .625em 2.75em; } }
 
 .open-wine-form {
   font-size: 1.5rem;
@@ -187,29 +184,43 @@ input[type="radio"] {
 .expand-link {
   margin-bottom: 1rem; }
 
-.wine-card {
-  display: inline-block;
-  width: 24%;
-  margin-right: 1%;
-  margin-bottom: 1%;
-  padding-bottom: .5rem;
+main {
+  height: 100vh;
+  display: flex;
+  flex-wrap: wrap; }
+
+a.wine-card {
+  display: grid;
+  grid-template-areas: "card-image card-info";
   border: 1px solid #ddd;
   border-radius: 5px;
-  color: #2B202F; }
-  .wine-card:hover {
+  color: #2B202F;
+  background-color: #fff;
+  height: 150px;
+  width: 340px;
+  margin: 1em 0 0 1em;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2); }
+  a.wine-card:hover {
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
-    transition: all .1s ease-in-out; }
-  .wine-card .card-image {
+    transition: all .1s ease-in-out;
+    text-decoration: none; }
+  a.wine-card .card-image {
+    grid-area: card-image;
     background-color: #ddd;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 200px; }
-  .wine-card h3.wine-row {
-    padding-top: .8rem; }
-  .wine-card .wine-row {
-    display: block;
-    padding: .1rem 1rem; }
+    height: 150px;
+    width: 150px; }
+  a.wine-card .card-info {
+    grid-area: card-info;
+    width: 150px;
+    padding: 20px; }
+    a.wine-card .card-info h3 {
+      font-size: 1em;
+      margin: 0; }
+    a.wine-card .card-info span {
+      font-size: 0.875em; }
 
 .auth-form {
   margin: 1rem 0;
@@ -243,34 +254,19 @@ input[type="radio"] {
       box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.8);
       filter: blur(3px); } }
 
-header {
-  background-color: #f9f9f9;
-  flex: 1 0 60px;
+.grid-container {
   display: flex;
-  line-height: 60px;
-  padding-top: 0;
-  padding-right: 3%;
-  padding-bottom: 0;
-  padding-left: 3%; }
+  background-color: #F3F2F3; }
+  .grid-container nav {
+    flex: 0 1 188px; }
 
 nav {
-  display: flex;
-  flex: 1 1 auto; }
-  nav div:first-child {
-    display: flex;
-    flex: 1 1 auto; }
-  nav div:nth-child(2) {
-    display: flex;
-    flex: 1 1 auto;
-    justify-content: flex-end; }
-    nav div:nth-child(2) ul {
-      list-style: none;
-      display: flex;
-      align-items: center; }
-      nav div:nth-child(2) ul li {
-        margin: 0 40px; }
-        nav div:nth-child(2) ul li:nth-child(1) {
-          margin-left: 0; }
+  grid-area: sidebar;
+  padding: 40px;
+  background-color: #fff; }
+  nav .logo-img {
+    max-height: 33px;
+    margin-bottom: 30px; }
 
 p {
   font-size: 1.125em;
@@ -280,7 +276,11 @@ p {
   display: flex;
   flex-direction: row; }
   .landing-buttons a.button {
-    flex: none; }
+    flex: none;
+    padding: .625em 3.75em; }
+    @media (max-width: 500px) {
+      .landing-buttons a.button {
+        padding: .625em 2.75em; } }
   .landing-buttons a.button:first-child {
     margin-right: 1rem; }
 
