--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -16,6 +16,8 @@ $gray: #DEDEDE;
 
 $darker-gray: #CECECE;
 
+$background-gray: #F3F2F3;
+
 $font-heading: 'Playfair Display', serif;
 
 $font-body: 'Helvetica Neue', 'Lato', sans-serif;
