--- a/client/src/styles/sass/layout/_module.scss
+++ b/client/src/styles/sass/layout/_module.scss
@@ -1,3 +1,4 @@
-@import '_header.scss';
+// @import '_header.scss';
+@import '_sidebar.scss';
 @import '_landing.scss';
 @import '_logged-out-layout.scss';
