--- a/client/src/styles/sass/layout/_sidebar.scss
+++ b/client/src/styles/sass/layout/_sidebar.scss
@@ -3,7 +3,8 @@ nav {
   padding: 40px;
   //max-width: 188px;
   background-color: #fff;
-
+  height: 100vh;
+  
   .logo-img {
     max-height: 33px;
     margin-bottom: 30px
