--- a/client/src/styles/sass/components/_buttons.scss
+++ b/client/src/styles/sass/components/_buttons.scss
@@ -5,11 +5,11 @@
 .button, button {
   display: inline-block;
   padding: .625em 2.8125em;
-  background-color: #fff;
+  background-color: $background-gray;
   color: $dark-purple;
   font-weight: 700;
   text-decoration: none;
-  border: 1px solid $purple-pink;
+  border: 1px solid $background-gray;
   border-radius: 5px;
 
   &:hover {
@@ -22,7 +22,6 @@
 }
 
 .open-wine-form {
-  //font-family: $fonts;
   font-size: 1.5rem;
   padding: 1rem 2rem;
 }
@@ -35,10 +34,16 @@
 
 .btn-primary {
   background-color: $purple-pink;
+  border: 1px solid $purple-pink;
   color: #fff;
 
   &:hover {
     //background-color: $dark-purple;
   }
+}
+
+.btn-outline {
+  background-color: #fff;
+  border: 1px solid $purple-pink;
 }
 
