--- a/client/src/styles/sass/components/_module.scss
+++ b/client/src/styles/sass/components/_module.scss
@@ -1,5 +1,6 @@
 @import '_buttons.scss';
 @import 'wine-form/_forms.scss';
+@import 'wine-form/_wine-form.scss';
 // @import 'wine-feed/_winedisplay.scss';
 @import 'wine-feed/_wine-feed.scss';
 @import 'wine-feed/_wine-card.scss';
