--- a/client/src/styles/sass/components/wine-form/_wine-form.scss
+++ b/client/src/styles/sass/components/wine-form/_wine-form.scss
@@ -53,9 +53,49 @@ h1.wine-form-heading {
       max-width: 24rem;
     }
 
+    input[type="radio"] {
+      opacity: 0;
+      position: absolute;
+
+      &:focus + label {
+        outline: rgba(77, 97, 171, 0.5) auto 3px;
+      }
+
+      &:checked + label {
+        background-color: #3981ea;
+        color: #fff;
+      }
+    }
+
+    .radio-label {
+      font-weight: 400;
+      padding: 10px;
+      margin-right: 10px;
+      background-color: #fff;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+      text-align: center;
+      border-radius: 5px;
+      //display: inline-block;
+
+      &:hover {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,.3);
+        cursor: pointer;
+      }
+
+      img {
+        width: 75px;
+        height: 75px;
+        display: block;
+      }
+    }
+
     .expand-link {
       display: block;
       margin-bottom: 1rem;
+    }
+
+    input[type="submit"] {
+      margin-right: 1rem;
     }
 
   }
