--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -186,6 +186,8 @@ h1.wine-form-heading {
       .wine-form .upload-container .upload-image:focus + label {
         outline: 1px dotted #000;
         outline: -webkit-focus-ring-color auto 5px; }
+    .wine-form .upload-container img {
+      max-width: 80%; }
   .wine-form .normal-form-container {
     grid-column: form;
     padding: 2rem; }
@@ -224,6 +226,47 @@ h1.wine-form-heading {
 label {
   display: block;
   font-weight: 700; }
+
+.wine-info {
+  min-height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0;
+  grid-template-areas: "breadcrumbs breadcrumbs" "heading heading" "img content"; }
+  .wine-info .breadcrumbs {
+    grid-area: breadcrumbs;
+    height: 2rem;
+    padding-top: 1rem;
+    padding-left: 2rem; }
+  .wine-info .heading {
+    grid-area: heading;
+    padding-left: 2rem;
+    margin-top: -20px;
+    position: relative;
+    z-index: 2; }
+    .wine-info .heading h1 {
+      line-height: 1;
+      display: inline-block;
+      margin-right: 1rem; }
+    .wine-info .heading .edit-wine-button {
+      padding: 0;
+      border: 0; }
+      .wine-info .heading .edit-wine-button:hover {
+        box-shadow: none;
+        text-decoration: underline; }
+  .wine-info .wine-img-container {
+    grid-area: img;
+    background-color: #F3F2F3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -150px; }
+    .wine-info .wine-img-container img {
+      max-width: 80%; }
+  .wine-info .wine-content {
+    grid-area: content;
+    padding-left: 2rem; }
 
 main {
   display: flex;
