--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -20,6 +20,8 @@ $darker-gray: #CECECE;
 
 $background-gray: #F3F2F3;
 
+$purple-gray: #7B737D;
+
 $font-heading: 'Playfair Display', serif;
 
 $font-body: 'Helvetica Neue', 'Lato', sans-serif;
