--- a/client/src/styles/sass/components/wine-page/_wine-info.scss
+++ b/client/src/styles/sass/components/wine-page/_wine-info.scss
@@ -1,61 +1,84 @@
 .wine-info {
-  min-height: 100vh;
+  //min-height: 100vh;
   width: 100vw;
   display: grid;
+  grid-template-rows: repeat(auto-fill, minmax(3.5rem, 1fr));
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 0;
+  // grid-template-areas: 
+  //   "breadcrumbs breadcrumbs"
+  //   "heading content"
+  //   "img content";
   grid-template-areas: 
     "breadcrumbs breadcrumbs"
-    "heading heading"
     "img content";
 
   .breadcrumbs {
     grid-area: breadcrumbs;
-    height: 2rem;
+    //height: 2rem;
     padding-top: 1rem;
     padding-left: 2rem;
-  }
-
-  .heading {
-    grid-area: heading;
-    padding-left: 2rem;
-    margin-top: -20px;
-    position: relative;
+    position: absolute;
     z-index: 2;
-
-    h1 {
-      line-height: 1;
-      display: inline-block;
-      margin-right: 1rem;
-    }
-
-    .edit-wine-button {
-      padding: 0;
-      border: 0;
-
-      &:hover {
-        box-shadow: none;
-        text-decoration: underline;
-      }
-    }
   }
 
   .wine-img-container {
     grid-area: img;
     background-color: $background-gray;
+    height: calc(100vh - 4rem);
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: -150px;
+    //justify-content: space-between;
+    justify-items: stretch;
+    // align-items: center;
+    flex-direction: column;
+
+    .wine-heading {
+      padding-left: 2rem;
+      // margin-top: -20px;
+      // position: relative;
+      // z-index: 2;
+      display: flex;
+      align-items: flex-end;
+  
+      h1 {
+        line-height: 1;
+        display: inline-block;
+        margin-right: 1rem;
+        margin-bottom: 0;
+      }
+  
+      .edit-wine-button {
+        padding: 0;
+        border: 0;
+        margin-bottom: 2px;
+  
+        &:hover {
+          box-shadow: none;
+          text-decoration: underline;
+        }
+      }
+    }
 
     img {
       max-width: 80%;
+      align-self: center;
+      justify-self: center;
     }
   }
 
   .wine-content {
     grid-area: content;
+    
     padding-left: 2rem;
+
+    .description-row {
+      margin-bottom: 1.5rem;
+
+      .description-label {
+        color: $purple-gray;
+        font-weight: 700;
+      }
+    }
   }
 }
 
