--- a/client/src/styles/sass/helpers/_variables.scss
+++ b/client/src/styles/sass/helpers/_variables.scss
@@ -22,6 +22,8 @@ $background-gray: #F3F2F3;
 
 $purple-gray: #7B737D;
 
+$red: #C44A4A;
+
 $font-heading: 'Playfair Display', serif;
 
 $font-body: 'Helvetica Neue', 'Lato', sans-serif;
