--- a/client/src/styles/sass/components/wine-feed/_wine-feed.scss
+++ b/client/src/styles/sass/components/wine-feed/_wine-feed.scss
@@ -1,4 +1,11 @@
-main {
+.wine-feed {
+  margin-bottom: 3rem;
+  section {
+    padding: 0;
+  }
+}
+
+.wine-card-group {
   //height: 100vh;
   display: flex;
   flex-wrap: wrap;
