--- a/client/src/styles/sass/layout/_sidebar.scss
+++ b/client/src/styles/sass/layout/_sidebar.scss
@@ -1,9 +1,9 @@
 nav {
-  grid-area: sidebar;
+  //grid-area: sidebar;
   padding: 40px;
   //max-width: 188px;
   background-color: #fff;
-  height: 100vh;
+  //height: 100vh;
   
   .logo-img {
     max-height: 33px;
